<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.Home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/goodmorning"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/how_are_you_feeling_today"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"


            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgSad"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/happy"
                android:minHeight="48dp"
                android:src="@drawable/ic_face_angry_solid"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/imgConfused"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/meditate"
                android:minHeight="48dp"
                android:src="@drawable/ic_face_sad_cry_solid"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imghappy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/happy"
                android:minHeight="48dp"
                android:src="@drawable/ic_face_frown_solid"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/imgHappier"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/meditate_2"
                android:minHeight="48dp"
                android:src="@drawable/ic_face_grin_solid"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/thought_of_the_day"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/whats_on_your_mind"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/recommend_for_you"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:text="@string/view_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/meditate_1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/meditate_2"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/meditate_3"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/meditate_4"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>





</LinearLayout>